k8s-dev-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development
