k8s-prod-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
