deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-webapp
spec:
  selector:
    matchLabels:
      app: k8s-webapp
  template:
    metadata:
      labels:
        app: k8s-webapp
    spec:
      containers:
      - name: k8s-webapp
        image: gematt/k8s-webapp:0.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
  replicas: 3
