k8s-webapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-webapi
spec:
  selector:
    app: k8s-webapi
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-webapi
spec:
  selector:
    matchLabels:
      app: k8s-webapi
  template:
    metadata:
      labels:
        app: k8s-webapi
    spec:
      containers:
      - name: k8s-webapi
        image: gematt/k8s-webapi:0.1.2
#        resources:
#          limits:
#            memory: "128Mi"
#            cpu: "250m"
        ports:
        - containerPort: 80
  replicas: 2
