k8s-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-webapp
spec:
  selector:
    app: k8s-webapp
  ports:
  - port: 6000
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-webapp
spec:
  selector:
    matchLabels:
      app: k8s-webapp
  template:
    metadata:
      labels:
        app: k8s-webapp
    spec:
      containers:
      - name: k8s-webapp
        image: gematt/k8s-webapp:0.1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80        
  replicas: 2
