service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-webapp
spec:
  selector:
    app: k8s-webapp
  ports:
  - port: 6000
    targetPort: 80
  type: LoadBalancer
